# fastapi_basic_webapp

./: .gitignore  Makefile  Readme.md  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  test_users.py
sql_app/: crud.py
