[tool.poetry]
name = "its_about_time_backend"
version = "0.1.0"
description = ""
authors = ["Michal Sopniewski <Michal Sopniewski>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.73.0"
mongoengine = "^0.23.1"

[tool.poetry.dev-dependencies]
uvicorn = "^0.17.1"
pytest = "^6.2.5"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
