[tool.poetry]
name = "its_about_time_backend"
version = "0.1.0"
description = ""
authors = ["Michal Sopniewski <Michal Sopniewski>"]

[tool.poetry.dependencies]
python = "^3.9.9"
fastapi = "^0.73.0"
SQLAlchemy = "^1.4.31"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
